@@ -158,6 +158,14 @@ private:
     virtual wxWindow *GetEditableWindow() wxOVERRIDE;
     virtual WXHWND GetEditHWND() const wxOVERRIDE;
 
+    // Common part of MSWProcessEditMsg() and MSWProcessSpecialKey(), return
+    // true if the key was processed.
+    bool MSWProcessEditSpecialKey(WXWPARAM vkey);
+
+#if wxUSE_OLE
+    virtual void MSWProcessSpecialKey(wxKeyEvent& event) wxOVERRIDE;
+#endif // wxUSE_OLE
+
     // common part of all ctors
     void Init()
     {
