@@ -573,21 +573,54 @@ private:
 
     void OnCharHook(wxKeyEvent& event)
     {
-        // If the autocomplete drop-down list is currently displayed when the
-        // user presses Escape, we need to dismiss it manually from here as
-        // Escape could be eaten by something else (e.g. EVT_CHAR_HOOK in the
-        // dialog that this control is found in) otherwise.
-        if ( event.GetKeyCode() == WXK_ESCAPE )
+        // We need to override the default handling of some keys here.
+        bool specialKey = false;
+        switch ( event.GetKeyCode() )
         {
+            case WXK_RETURN:
+                if ( m_win->HasFlag(wxTE_PROCESS_ENTER) )
+                    specialKey = true;
+                break;
+
+            case WXK_TAB:
+                if ( m_win->HasFlag(wxTE_PROCESS_TAB) )
+                    specialKey = true;
+                break;
+
+            case WXK_ESCAPE:
+                specialKey = true;
+                break;
+        }
+
+        if ( specialKey )
+        {
+            // Check if the drop down is currently open.
             DWORD dwFlags = 0;
             if ( SUCCEEDED(m_autoCompleteDropDown->GetDropDownStatus(&dwFlags,
                                                                      NULL))
                     && dwFlags == ACDD_VISIBLE )
             {
-                ::SendMessage(GetHwndOf(m_win), WM_KEYDOWN, WXK_ESCAPE, 0);
+                if ( event.GetKeyCode() == WXK_ESCAPE )
+                {
+                    // We need to dismiss the drop-down manually as Escape
+                    // could be eaten by something else (e.g. EVT_CHAR_HOOK in
+                    // the dialog that this control is found in) otherwise.
+                    ::SendMessage(GetHwndOf(m_win), WM_KEYDOWN, WXK_ESCAPE, 0);
 
-                // Do not skip the event in this case, we've already handled it.
-                return;
+                    // Do not skip the event in this case, we've already handled it.
+                    return;
+                }
+            }
+            else // Drop down is not open.
+            {
+                // In this case we need to handle Return and Tab as both of
+                // them are simply eaten by the auto completer and never reach
+                // us at all otherwise.
+                if ( event.GetKeyCode() != WXK_ESCAPE )
+                {
+                    m_entry->MSWProcessSpecialKey(event);
+                    return;
+                }
             }
         }
 
@@ -803,6 +836,11 @@ bool wxTextEntry::DoAutoCompleteFileNames(int flags)
 }
 
 #endif // wxUSE_DYNLIB_CLASS
+
+void wxTextEntry::MSWProcessSpecialKey(wxKeyEvent& WXUNUSED(event))
+{
+    wxFAIL_MSG(wxS("Must be overridden if can be called"));
+}
 
 wxTextAutoCompleteData *wxTextEntry::GetOrCreateCompleter()
 {
